[package]
name = "rattler_progress"
version = "0.1.0"
edition.workspace = true
authors = ["Magenta Qin <magenta2127@gmail.com>"]
description = "TODO: Description"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
indicatif = { workspace = true }
parking_lot = { workspace = true }
